<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="alarmClock">Cool Alarm</string>
    <string name="app_label">Cool Alarm</string>
    <!-- settings -->
    <string name="settings">Date &amp; time settings</string>
    <!-- Menu items-->
    <string name="add_alarm">Add alarm</string>
    <string name="delete_alarm">Delete alarm</string>
    <string name="show_clock">Show clock</string>
    <string name="hide_clock">Hide clock</string>
    <string name="set_alarm">Set alarm</string>
    <!-- Setting labels on Set alarm screen-->
    <string name="enable">Alarm</string>
    <string name="alarm_vibrate">Vibrate</string>
    <string name="alarm_repeat">Repeat</string>
    <string name="alarm_label">Label</string>
    <string name="alert">Ringtone</string>
    <string name="time">Time</string>
    <string name="browse">Add</string>
    <string name="file_type_folder_text">Folder</string>
    <string name="file_size_text">File Size:</string>
    <string name="file_type_parent_text">Parent Directory</string>
    <string name="file_add_success">was added.</string>
    <string name="file_add_duplicated">Ringtone has contain this song.\nPlease select another song !</string>

    <!-- Button lables that appear on the alarm dialog -->
    <string name="alarm_alert_dismiss_text">Dismiss</string>
    <string name="alarm_alert_snooze_text">Snooze</string>
    <!-- Toasts that appear after Alarm is snoozed from the Alarm dialog -->
    <string name="alarm_alert_snooze_set">Snoozing for <xliff:g id="minutes">%d</xliff:g> minutes.</string>
    <string name="alarm_alert_snooze_not_set">Snooze not set -- next alarm set for <xliff:g id="time">%s</xliff:g></string>
    <string name="alarm_alert_dismissed">Alarm dismissed</string>

    <!-- Text for alarm confirmation toasts -->
    <string name="alarm_set">This alarm is set for <xliff:g id="time_delta">%s</xliff:g> from now.</string>
    <string name="combiner"><xliff:g id="xxx">%1$s</xliff:g><xliff:g id="xxx">%2$s</xliff:g><xliff:g id="xxx">%3$s</xliff:g><xliff:g id="xxx">%4$s</xliff:g><xliff:g id="xxx">%5$s</xliff:g></string>
    <string name="day">"1 day"</string>
    <string name="days">"<xliff:g id="days">%s</xliff:g> days"</string>
    <string name="hour">1 hour</string>
    <string name="hours"><xliff:g id="hours">%s</xliff:g> hours</string>
    <string name="and">" and "</string>
    <string name="space">" "</string>
    <string name="subminute">"less than 1 minute"</string>
    <string name="minute">"1 minute"</string>
    <string name="minutes">"<xliff:g id="minutes">%s</xliff:g> minutes"</string>

    <string name="am">am</string>
    <string name="pm">pm</string>

    <!-- Status bar notifications-->
    <string name="alarmSet">Alarm set</string>
    <string name="snoozeSet">Snooze set</string>
    <string name="nextAlarm">Next alarm: <xliff:g id="next_alarm_time">%s</xliff:g></string>

    <!-- Repeat options that appear under an alarm on main Cool Alarm screen to identify repetition schedule -->
    <string name="every_day">every day</string>
    <string name="never">Never</string>
    <string name="day_concat">", "</string>
    <!-- Appears at the top of the screen after you select the clock on the main Cool Alarm screen -->
    <string name="clock_instructions">Select a clock to display.</string>

    <!-- error dialog title-->
    <string name="error">Alarm not set</string>
    <!-- error dialog message -->
    <string name="dberror">Sorry, the alarm could not be set.</string>

    <!-- Days of week -->
    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="days_of_week_short">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>
    <string-array name="file_extension">
    	<item>.mp3</item>
    </string-array>
	
	<!-- custom titlebar -->
    <style name="CustomWindowTitleBackground">
        <item name="android:background">#323331</item>
    </style>
 
    <!-- custom theme -->
    <style name="CustomTheme" parent="android:Theme">
        <item name="android:windowTitleSize">35dip</item>
        <item name="android:windowTitleBackgroundStyle">@style/CustomWindowTitleBackground</item>
        <item name="android:windowBackground">@drawable/bg02</item>
        
    </style>

     
</resources>


