<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:key="on" 
        android:title="@string/enable"/>
    <Preference android:key="time" 
        android:title="@string/time"/>
    <vnandroidapps.android.clock.AlarmPreference
        android:key="alarm" 
        android:title="@string/alert"
        android:ringtoneType="alarm"
        android:showDefault="false"
        android:showSilent="false" />
    <CheckBoxPreference android:key="vibrate" 
        android:title="@string/alarm_vibrate"/>
    <vnandroidapps.android.clock.RepeatPreference
        android:key="setRepeat" 
        android:title="@string/alarm_repeat"
        android:entries="@array/days_of_week"
        android:entryValues="@array/days_of_week"/>
</PreferenceScreen>
